Fixed the styling of the edit and delete buttons on the libraries page so that they are aligned.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -32,3 +32,7 @@ html {
   padding-left: 10px;
   padding-right: 10px;
 }
+.btn-danger {
+  margin-top: 0px;
+
+}
